[build-system]
requires = ["setuptools>=61", "pbr>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seive_cache"
dynamic = ["version"]
description = "A simple implementation of SEIVE caching algorithm"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Pham Le Gia Dai", email = "daipham.3213@gmail.com" },
]
classifiers = [
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "stevedore>=5.1.0",
  "dogpile.cache>=1.3.0",
  "iso8601>=2.1.0",
]

[project.optional-dependencies]
redis = ["redis"]

[project.entry-points."dogpile.cache"]
"sieve_cache.memory" = "sieve_cache.backends.memory:InMemoryDriver"

[tool.setuptools.dynamic]
version = { attr = "sieve_cache.version.version_string" }

[tool.setuptools.packages.find]
include = ["sieve_cache*"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
docstring-code-format = true
