[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "sieve.cache"
dynamic = ["version", "dependencies"]
description = "A simple implementation of SIEVE caching algorithm"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Pham Le Gia Dai", email = "daipham.3213@gmail.com" },
]
classifiers = [
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
redis = ["redis"]

[project.entry-points."dogpile.cache"]
"sieve_cache.memory" = "sieve_cache.backends.memory:InMemoryDriver"

[tool.hatch.build.targets.wheel]
packages = ["sieve_cache"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
docstring-code-format = true
