[metadata]
name = sieve_cache

[flake8]
# [H104]: Empty file with only comments
# [W504]: Line break after binary operator
# [W503]: Line break before binary operator
# [H306]: Alphabetically order your imports by the full module path
# [H405]: Multi line docstring summary not separated with an empty line
# [I202]: Additional newline in a group of imports.
ignore = H104,W504,H306,H405,W503,I202
show-source = true
builtins = _
exclude = .venv,.git,.tox,dist,doc,*lib/python*,*egg,build
import-order-style = pep8
# [H106]: Don't put vim configuration in source files
# [H203]: Use assertIs(Not)None to check for None
# [H204]: Use assert(Not)Equal to check for equality
# [H205]: Use assert(Greater|Less)(Equal) for comparison
# [H904]: Delay string interpolations at logging calls
enable-extensions = H106,H203,H204,H205,H904